--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 @font-face {
     font-family: regular;
-    src: url(/fonts/Roboto-Black.ttf);
+    src: url(/fonts/Roboto-Medium.ttf);
 }
 
 /* Defaults End */
