--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,10 @@
     width: 50px!important;
     height: 50px!important;
 } */
-
+.logo img {
+  width: 100px;
+  height: 100px;
+}
 .nav-item {
   margin-left: 20px;
   margin-right: 20px;
@@ -31,4 +34,17 @@
 }
 
 /* Navbar End */
+/* Main */
+.main-body {
+  background-color: #F9FBFC;
+}
+.main-img-div {
+  /* width: 100%; */
+  height: 100%;
+}
+.main-img {
+  width: 500px;
+  height: 500px;
+}
+/* Main End */
 /* Header End */
