header main done responsive

--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,8 @@
   height: 100%;
 }
 .main-img {
-  width: 500px;
-  height: 500px;
+  width: 92%;
+  height: 95%;
 }
 
 /* Todo .main-desc padding faizle verilib ola biler deyismek lazim olsun */
