--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@
   font-family: regular;
   src: url(/fonts/Roboto-Medium.ttf);
 }
+html {
+  scroll-behavior: smooth;
+}
 
 /* Defaults End */
 
@@ -84,7 +87,7 @@
 .wave-div img {
   width: 100%;
 }
-.discount-ad{
+.discount-ad {
   width: fit-content;
 }
 .x {
