--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,37 @@ html {
   width: 50%;
 }
 
+.social-media span i {
+  font-size: xx-large;
+}
 
+
+.social-media span i.fa-whatsapp{
+  background-color: #39D675;
+  color: #f9fbfc;
+
+  border-radius: 50%;
+  padding: 10px;
+
+}
+.social-media span i.fa-instagram{
+  background-color: #C746DC;
+  color: #f9fbfc;
+  border-radius: 50%;
+  padding: 10px;
+
+}
+.social-media span i.fa-facebook{
+  background-color: #4D69A2;
+  color: #f9fbfc;
+
+  border-radius: 50%;
+  padding: 10px;
+
+}
+.whatsapp-icon {
+
+}
 /* About End */
 
 /* Home End */
