--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@
   font-family: regular;
   src: url(/fonts/Roboto-Medium.ttf);
 }
+
+@font-face {
+  font-family: Medium-Italic;
+  src: url(/fonts/Roboto-MediumItalic.ttf);
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -28,10 +34,12 @@ html {
   width: 100px;
   height: 100px;
 }
+
 .nav-item {
   margin-left: 20px;
   margin-right: 20px;
 }
+
 .nav-item a {
   font-family: regular;
 }
@@ -42,10 +50,12 @@ html {
 .main-body {
   background-color: #f9fbfc;
 }
+
 .main-img-div {
   /* width: 100%; */
   height: 100%;
 }
+
 .main-img {
   width: 92%;
   height: 95%;
@@ -55,13 +65,16 @@ html {
 .main-title {
   padding: 15% 15% 10% 15%;
 }
+
 /* Todo .main-desc padding faizle verilib ola biler deyismek lazim olsun */
 .main-desc {
   padding: 1% 15% 0% 15%;
 }
+
 .button-div {
   padding: 1% 15% 0% 15%;
 }
+
 .button-div button:nth-child(1) {
   margin-right: 5%;
 }
@@ -74,78 +87,140 @@ html {
 .designs-div {
   padding: 2% 0% 2% 0%;
 }
+
 .design-examples img {
   width: 95% !important;
   height: auto;
 }
+
 /* Designs End */
 
 /* Discount */
 .wave-div {
   padding: 3% 0% 2% 0%;
 }
+
 .wave-div img {
   width: 100%;
 }
+
 .discount-ad {
   width: fit-content;
 }
+
 .x {
   display: flex;
   flex-wrap: wrap;
 }
+
 /* Discount End */
 
 /* Why-panel */
 .why-panel {
   padding: 5%;
 }
-.why-div{
-  border-radius: 10px!important;
+
+.why-div {
+  border-radius: 10px !important;
 }
 
 /* Why-panel End */
 
-
 /* About */
-.about{
+.about {
   background-image: url(/images/hero11-free-img.png);
+  background-color: #f9f9f9;
+  /* opacity: .68; */
+  padding-bottom: 5%;
+  background-position: center;
+  /* Todo  */
+  /* mix-blend-mode: luminosity; */
+  /* Todo  */
+  /* height: 100vh; */
+  display: flex;
+  align-items: center;
 }
+
 .about-content {
   width: 50%;
+}
+
+.about-title {
+  padding-top: 10%;
+}
+
+.about-desc {
+  padding-top: 15%;
+  padding-bottom: 15%;
+}
+
+.about-desc p {
+  line-height: 200%;
+  font-size: large;
+  font-family: Medium-Italic;
 }
 
 .social-media span i {
   font-size: xx-large;
 }
 
-
-.social-media span i.fa-whatsapp{
-  background-color: #39D675;
+.social-media span i.fa-whatsapp {
+  background-color: #39d675 !important;
   color: #f9fbfc;
 
   border-radius: 50%;
   padding: 10px;
-
 }
-.social-media span i.fa-instagram{
-  background-color: #C746DC;
+
+.social-media span i.fa-instagram {
+  background-color: #c746dc;
   color: #f9fbfc;
   border-radius: 50%;
   padding: 10px;
-
 }
-.social-media span i.fa-facebook{
-  background-color: #4D69A2;
+
+.social-media span i.fa-facebook {
+  background-color: #4d69a2;
   color: #f9fbfc;
 
   border-radius: 50%;
   padding: 10px;
-
 }
-.whatsapp-icon {
 
-}
 /* About End */
 
 /* Home End */
+
+/* Footer */
+.footer {
+  background-color: #313131;
+}
+
+.footer img {
+  width: 20%;
+  height: 20%;
+}
+
+.footer-border {
+  border-top: 1px solid #f9fbfc;
+  background-color: #313131;
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+}
+
+.footer-border p.cop-p {
+  flex-direction: row !important;
+}
+
+.footer-border .dop-p {
+  display: flex;
+
+  flex-direction: row-reverse;
+}
+
+.footer-border p {
+  color: #f9fbfc;
+}
+
+/* Footer End */
