--- a/css/style.css
+++ b/css/style.css
@@ -107,10 +107,12 @@ html {
 .discount-ad {
   width: fit-content;
 }
+
 .why-icons {
   font-size: xx-large;
   padding: 15px;
 }
+
 .x {
   display: flex;
   flex-wrap: wrap;
@@ -246,9 +248,21 @@ html {
 /* Enlarged image styling */
 .modal-lg .modal-content .modal-body .enlarged-image {
   max-width: 100%;
-  max-height: calc(100vh - 120px); /* Adjust the value to control the height */
+  max-height: calc(100vh - 120px);
+  /* Adjust the value to control the height */
   margin: 0 auto;
   display: block;
+}
+
+.modal-header .close {
+  border: none;
+  background-color: transparent;
+  color: #313131;
+  /* Change the color as needed */
+  font-size: 24px;
+  font-weight: bold;
+  opacity: 1;
+  padding: 0;
 }
 
 
