--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 /* Defaults */
 /* Defaults */
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: regular;
+  /* border: red 1px dashed; */
 }
 
 @font-face {
@@ -211,7 +213,7 @@ html {
   background-color: #313131;
   display: flex;
   justify-content: space-between;
-  margin: 0;
+  margin: 0!important;
 }
 
 .footer-border .left-p {
