Made it responsive

--- a/css/media.css
+++ b/css/media.css
@@ -26,7 +26,14 @@
     }
 
     /* Footer End */
+    /* Vacancies */
+    .floating-div{
+        width: 100%!important;
+        float: none!important;
+    }
+    /* Vacancies End */
 }
+
 
 
 
