--- a/css/media.css
+++ b/css/media.css
@@ -31,6 +31,9 @@
         width: 100%!important;
         float: none!important;
     }
+    /* Default styles for larger screens */
+   
+  
     /* Vacancies End */
 }
 
